--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
   <div class="container" role="main">
     <header>
-      <img src="img/flor_kirpich.png" alt="Brega logo" style="height:56px;display:block;" onerror="this.style.display='none'"/>
+      <img src="public/img/b.png" alt="Brega logo" style="height:56px;display:block;" onerror="this.style.display='none'"/>
       <h1>Brega</h1>
-      <img src="img/up_ornament.png" class="orn" alt="header ornament" onerror="this.style.display='none'"/>
+      <img src="public/img/up_ornament.png" class="orn" alt="header ornament" onerror="this.style.display='none'"/>
     </header>
 
     <div class="map-wrap" aria-hidden="false">
-      <div class="map-frame" style="border-image: url('img/ornament_border.png') 12 round;">
+      <div class="map-frame" style="border-image: url('public/img/ornament_border.png') 12 round;">
         <iframe
           class="map-iframe"
           src="https://www.google.com/maps?q=36.5,24.0&z=9&output=embed"
@@ -26,7 +26,7 @@
       <button class="map-cta" id="openBooking">Find a boat</button>
     </div>
 
-    <img src="img/ornament_top.png" class="orn-divider" alt="divider top" onerror="this.style.display='none'"/>
+    <img src="public/img/ornament_top.png" class="orn-divider" alt="divider top" onerror="this.style.display='none'"/>
 
     <section aria-labelledby="what-is-brega" class="what">
       <div class="section-title">
@@ -34,19 +34,19 @@
         <p class="section-sub">Brega is a convenient and fast way to find and rent boats. Browse locations on the map, contact owners directly, or add your boat to the catalog.</p>
       </div>
 
-      <img src="img/midl_ornament.png" class="orn-divider" alt="divider mid" onerror="this.style.display='none'"/>
+      <img src="public/img/midl_ornament.png" class="orn-divider" alt="divider mid" onerror="this.style.display='none'"/>
 
       <div class="cta-row" role="navigation" aria-label="Primary actions">
         <button class="btn" id="addBoatBtn">
-          <img src="img/form_gorizont_onament.png" alt="Add icon" style="height:20px;margin-right:6px"/> Add a boat
+          <img src="public/img/form_gorizont_onament.png" alt="Add icon" style="height:20px;margin-right:6px"/> Add a boat
         </button>
         <button class="btn secondary" id="findBoatBtn">
-          <img src="img/ornamen_gorizont.png" alt="Find icon" style="height:20px;margin-right:6px"/> Find a boat
+          <img src="public/img/ornamen_gorizont.png" alt="Find icon" style="height:20px;margin-right:6px"/> Find a boat
         </button>
       </div>
     </section>
 
-    <img src="img/down_ornament.png" class="orn-divider" alt="divider bottom" onerror="this.style.display='none'"/>
+    <img src="public/img/down_ornament.png" class="orn-divider" alt="divider bottom" onerror="this.style.display='none'"/>
 
     <footer>
       <p>© Brega 2025 — <a href="mailto:hello@brega.example">hello@brega.example</a></p>
