--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
   <title>Brega — Find & Rent Boats</title>
   <meta name="description" content="Brega — convenient & fast way to find and rent boats. Map + simple booking form." />
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* overlay */
+    .popup {
+      display: none; 
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+    }
+
+    /* popup box */
+    .popup-content {
+      background: #fff;
+      margin: 10% auto;
+      padding: 20px;
+      border-radius: 12px;
+      width: 90%;
+      max-width: 400px;
+      position: relative;
+    }
+
+    /* close button */
+    .close {
+      position: absolute;
+      top: 10px; right: 15px;
+      font-size: 24px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <div class="container" role="main">
@@ -37,7 +67,7 @@
       <img src="public/img/midl_ornament.png" class="orn-divider" alt="divider mid" onerror="this.style.display='none'"/>
 
       <div class="cta-row" role="navigation" aria-label="Primary actions">
-        <button class="btn" id="addBoatBtn">
+        <button class="btn" id="openPopup">
           <img src="public/img/form_gorizont_onament.png" alt="Add icon" style="height:20px;margin-right:6px"/> Add a boat
         </button>
         <button class="btn secondary" id="findBoatBtn">
@@ -51,6 +81,23 @@
     <footer>
       <p>© Brega 2025 — <a href="mailto:hello@brega.example">hello@brega.example</a></p>
     </footer>
+  </div>
+
+  <!-- POPUP -->
+  <div id="popupForm" class="popup">
+    <div class="popup-content">
+      <span id="closePopup" class="close">&times;</span>
+      <h2>Leave your contact</h2>
+      <form id="leadForm">
+        <label>Phone</label>
+        <input type="tel" name="phone" required placeholder="+1 555 123 4567">
+
+        <label>Email</label>
+        <input type="email" name="email" required placeholder="you@example.com">
+
+        <button type="submit">Submit</button>
+      </form>
+    </div>
   </div>
 
   <div class="modal" id="modal">
@@ -90,5 +137,27 @@
   </div>
 
   <script src="main.js"></script>
+  <script>
+    const popup = document.getElementById("popupForm");
+    document.getElementById("openPopup").onclick = () => popup.style.display = "block";
+    document.getElementById("closePopup").onclick = () => popup.style.display = "none";
+
+    document.getElementById("leadForm").onsubmit = async (e) => {
+      e.preventDefault();
+      
+      const formData = new FormData(e.target);
+      const data = Object.fromEntries(formData.entries());
+
+      // send to server
+      await fetch("/api/lead", {
+        method: "POST",
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify(data)
+      });
+
+      // redirect to add boat form
+      window.location.href = "/add-boat-form";
+    };
+  </script>
 </body>
 </html>
