--- a/index.html
+++ b/index.html
@@ -7,34 +7,56 @@
   <meta name="description" content="Brega — convenient & fast way to find and rent boats. Map + simple booking form." />
   <link rel="stylesheet" href="styles.css" />
   <style>
-    /* overlay */
-    .popup {
-      display: none; 
-      position: fixed;
-      z-index: 1000;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.6);
-    }
+/* overlay */
+.popup {
+display: none;
+position: fixed;
+z-index: 1000;
+left: 0; top: 0;
+width: 100%; height: 100%;
+background: rgba(0,0,0,0.6);
+}
 
-    /* popup box */
-    .popup-content {
-      background: #fff;
-      margin: 10% auto;
-      padding: 20px;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 400px;
-      position: relative;
-    }
 
-    /* close button */
-    .close {
-      position: absolute;
-      top: 10px; right: 15px;
-      font-size: 24px;
-      cursor: pointer;
-    }
+/* popup box */
+.popup-content {
+background: #fff;
+margin: 10% auto;
+padding: 20px;
+border-radius: 12px;
+width: 90%;
+max-width: 400px;
+position: relative;
+}
+
+
+/* close button */
+.close {
+position: absolute;
+top: 10px; right: 15px;
+font-size: 24px;
+cursor: pointer;
+}
+
+
+.input-ornament {
+display: flex;
+align-items: center;
+border: 1px solid #ccc;
+border-radius: 8px;
+padding: 6px 10px;
+margin-top: 10px;
+background: url('public/img/form_gorizont_onament.png') no-repeat center left;
+background-size: 24px auto;
+}
+
+
+.input-ornament input {
+flex: 1;
+border: none;
+outline: none;
+padding-left: 30px;
+}
   </style>
 </head>
 <body>
