--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@ padding-left: 30px;
       <h2>Leave your contact</h2>
       <form id="leadForm">
         <label>Phone</label>
-        <input type="tel" name="phone" required placeholder="+1 555 123 4567">
+        <input type="tel" name="" required placeholder="+598 123 4567">
 
         <label>Email</label>
-        <input type="email" name="email" required placeholder="you@example.com">
+        <input type="email" name="" required placeholder="you@example.com">
 
         <button type="submit">Submit</button>
       </form>
