--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@ padding-left: 30px;
       <span id="closePopup" class="close">&times;</span>
       <h2>Leave your contact</h2>
       <form id="leadForm">
-        <label>Phone</label>
-        <input type="tel" name="" required placeholder="+598 123 4567">
+        <label></label>
+        <input type="tel" name="phone" required placeholder="+598 123 4567">
 
-        <label>Email</label>
-        <input type="email" name="" required placeholder="you@example.com">
+        <label></label>
+        <input type="email" name="email" required placeholder="you@example.com">
 
         <button type="submit">Submit</button>
       </form>
