--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" type="image/png" href="public/img/fav64.png" sizes="64x64">
   <title>Brega — Find & Rent Boats</title>
-  <meta name="description" content="Brega — convenient & fast way to find and rent boats. Map + simple booking form." />
+  <meta name="description" content="Brega fast way to find and rent boats. Map and simple booking form." />
   <link rel="stylesheet" href="styles.css" />
   <style>
 /* overlay */
