--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@ padding-left: 30px;
       <h1>Brega</h1>
       <img src="public/img/up_ornament.png" class="orn" alt="header ornament" onerror="this.style.display='none'"/>
     </header>
+    
+      <div class="cta-row" role="navigation" aria-label="Primary actions">
+        <button class="btn" id="openPopup">
+          <img src="public/img/form_gorizont_onament.png" alt="Add icon" style="height:20px;margin-right:6px"/> Add a boat
+        </button>
+        <button class="btn secondary" id="findBoatBtn">
+          <img src="public/img/ornamen_gorizont.png" alt="Find icon" style="height:20px;margin-right:6px"/> Find a boat
+        </button>
+      </div>
 
     <div class="map-wrap" aria-hidden="false">
       <div class="map-frame" style="border-image: url('public/img/ornament_border.png') 12 round;">
