--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
     <header>
       <img src="public/img/b.png" alt="Brega logo" style="height:56px;display:block;margin:auto;" onerror="this.style.display='none'"/>
       <h1>Brega</h1>
-              <p class="section-sub">Brega is a convenient and fast way to find and rent boats. Browse locations on the map, contact owners directly, or add your boat to the catalog.</p>
+              <p class="section-sub">Brega is a convenient and fast way to find and rent boats. Make a form, we contact you with capitan directly, or add your boat to the catalog.</p>
       <img src="public/img/up_ornament.png" class="orn" alt="header ornament" onerror="this.style.display='none'"/>
     </header>
 
     <div class="cta-row" role="navigation" aria-label="Primary actions">
-      <button class="btn primary" onclick="window.location.href='https://your-notion-form-link-for-owners'">
-        <img src="public/img/ornamen_gorizont.png" alt="Add icon" style="height:20px;margin-right:6px"/>  I have a boat
+            <button class="btn secondary" onclick="window.location.href='https://your-notion-form-link-for-renters'">
+        <img src="public/look.png" alt="Find icon" style="height:20px;margin-right:6px"/>  Im looking a boat
       </button>
-      <button class="btn secondary" onclick="window.location.href='https://your-notion-form-link-for-renters'">
-        <img src="public/imgypg.png" alt="Find icon" style="height:20px;margin-right:6px"/>  Im looking a boat
+      <button class="btn primary" onclick="window.location.href='https://your-notion-form-link-for-owners'">
+        <img src="public/img/ypgc.png" alt="Add icon" style="height:20px;margin-right:6px"/>  I have a boat
       </button>
     </div>
 
