--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <footer>
-      <p>© Brega 2025 — <a href="mailto:hello@brega.example">hi@brega.app</a></p>
+      <p>© Brega 2025 — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
     </footer>
   </div>
 </body>
