--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
     </header>
 
     <div class="cta-row" role="navigation" aria-label="Primary actions">
-            <button class="btn secondary" onclick="window.location.href='https://your-notion-form-link-for-renters'">
-        <img src="public/look.png" alt="Find icon" style="height:20px;margin-right:6px"/>  Im looking a boat
-      </button>
+            </button>
       <button class="btn primary" onclick="window.location.href='https://your-notion-form-link-for-owners'">
         <img src="public/img/ypgc.png" alt="Add icon" style="height:20px;margin-right:6px"/>  I have a boat
       </button>
+            <button class="btn secondary" onclick="window.location.href='https://your-notion-form-link-for-renters'">
+        <img src="public/img/look.png" alt="Find icon" style="height:20px;margin-right:6px"/>  Im looking a boat
+      </button>
+
     </div>
 
     <div class="map-wrap">
