--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/png" href="public/img/fav64.png" sizes="64x64">
-  <title>Brega — Find & Rent Boats</title>
-  <meta name="description" content="Brega fast way to find and rent boats. Map and simple booking form." />
+  <title>Brega — Conectamos capitanes y amantes del mar. Encuentra y alquila embarcaciones</title>
+  <meta name="description" content="Brega facilita encontrar un capitán y una embarcación para tu próxima aventura en el agua. Forma rápida para buscar y alquilar barcos. Mapa y formulario de reserva sencillo. Conectamos capitanes y amantes del mar." />
   <link rel="stylesheet" href="styles.css" />
   <style>
     body {
       font-family: system-ui, sans-serif;
       margin: 0;
-      background: #f9f9f9;
+      background: #ffffff;
       color: #222;
     }
     h1, h2, h3 {
@@ -77,18 +77,18 @@
 <body>
   <div class="container" role="main">
     <header>
-      <img src="public/img/b.png" alt="Brega logo" style="height:56px;display:block;margin:auto;" onerror="this.style.display='none'"/>
+      <img src="public/img/b.png" alt="Logotipo de Brega" style="height:56px;display:block;margin:auto;" onerror="this.style.display='none'"/>
       <h1>Brega</h1>
-      <p class="section-sub">Brega is a convenient and fast way to find and rent boats. Make a form, we contact you with captain directly, or add your boat to the catalog.</p>
-      <img src="public/img/up_ornament.png" class="orn" alt="header ornament" onerror="this.style.display='none'"/>
+      <p class="section-sub">Brega facilita encontrar un capitán y una embarcación para tu próxima aventura en el agua. Completa un formulario y nos pondremos en contacto contigo directamente con el capitán.</p>
+      <img src="public/img/up_ornament.png" class="orn" alt="adorno de cabecera" onerror="this.style.display='none'"/>
     </header>
 
-    <div class="cta-row" role="navigation" aria-label="Primary actions">
-      <button class="btn primary" onclick="window.location.href='https://your-notion-form-link-for-owners'">
-        <img src="public/img/ypgc.png" alt="Add icon" style="height:20px"/> I have a boat
+    <div class="cta-row" role="navigation" aria-label="Acciones principales">
+      <button class="btn primary" onclick="window.location.href='https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105'">
+        <img src="public/img/ypgc.png" alt="Icono añadir" style="height:20px"/> Tengo un barco
       </button>
-      <button class="btn secondary" onclick="window.location.href='https://your-notion-form-link-for-renters'">
-        <img src="public/img/look.png" alt="Find icon" style="height:20px"/> I'm looking a boat
+      <button class="btn secondary" onclick="window.location.href='https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9'">
+        <img src="public/img/look.png" alt="Icono buscar" style="height:20px"/> Busco un barco
       </button>
     </div>
 
@@ -97,31 +97,32 @@
         <iframe
           class="map-iframe"
           src="https://www.google.com/maps?q=36.5,24.0&z=9&output=embed"
-          title="Brega map — locations">
+          title="Mapa de Brega — ubicaciones">
         </iframe>
       </div>
     </div>
 
-    <!-- New content after map -->
+    <!-- Nuevo contenido después del mapa -->
     <section>
-      <h2>Why Brega?</h2>
+      <h2>¿Por qué Brega?</h2>
       <div class="features">
         <div class="card">
-          <h3>For Boat Owners</h3>
-          <p>Earn with your yacht without middlemen, manage your schedule, and find passengers or friends for your next trip.</p>
+          <h3>Para propietarios de embarcaciones</h3>
+          <p>Gana con tu embarcación sin intermediarios, gestiona tu calendario y encuentra pasajeros o compañeros para tu próximo viaje.</p>
         </div>
         <div class="card">
-          <h3>For Renters</h3>
-          <p>Search for boats near you, choose the format you want — a short ride, fishing, a romantic sunset or an adventure at sea.</p>
+          <h3>Para quienes alquilan</h3>
+          <p>Busca embarcaciones cercanas, elige el formato que prefieras —un paseo corto, pesca, un atardecer romántico o una aventura en el mar.</p>
         </div>
+      </div>
     </section>
 
     <section>
-      <h2>How It Works</h2>
-      <p>1. Choose your role — boat owner or renter.<br>
-         2. Fill in the simple form.<br>
-         3. Connect directly with captains or passengers.<br>
-         4. Set sail — it’s that easy!</p>
+      <h2>Cómo funciona</h2>
+      <p>1. Elige tu rol — propietario o cliente.<br>
+         2. Rellena el formulario sencillo.<br>
+         3. Conecta directamente con capitanes o pasajeros.<br>
+         4. ¡Zarpa — así de fácil!</p>
     </section>
     <footer>
       <p>© Brega 2025 — <a href="mailto:hi@brega.app">hi@brega.app</a></p>
