--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <div class="cta-row" role="navigation" aria-label="Acciones principales">
       <button class="btn primary" onclick="window.location.href='https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105'">
-        <img src="public/img/ypgc.png" alt="Icono añadir" style="height:20px"/> Tengo un barco
+        <img src="public/img/ypgsf.png" alt="Icono añadir" style="height:20px"/> Tengo un barco
       </button>
       <button class="btn secondary" onclick="window.location.href='https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9'">
         <img src="public/img/look.png" alt="Icono buscar" style="height:20px"/> Busco un barco
