--- a/index.html
+++ b/index.html
@@ -83,14 +83,16 @@
       <img src="public/img/up_ornament.png" class="orn" alt="adorno de cabecera" onerror="this.style.display='none'"/>
     </header>
 
-    <div class="cta-row" role="navigation" aria-label="Acciones principales">
-      <button class="btn primary" onclick="window.location.href='https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105'">
-        <img src="public/img/ypgsf.png" alt="Icono añadir" style="height:20px"/> Tengo un barco
-      </button>
-      <button class="btn secondary" onclick="window.location.href='https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9'">
-        <img src="public/img/look.png" alt="Icono buscar" style="height:20px"/> Busco un barco
-      </button>
-    </div>
+<div class="cta-row" role="navigation" aria-label="Acciones principales">
+  <a href="https://real-dogsled-d8a.notion.site/27d9bf7f509581e69834f7305376bb90?pvs=105" 
+     class="btn primary" target="_blank" rel="noopener noreferrer">
+    <img src="public/img/ypgsf.png" alt="Icono añadir" style="height:20px"/> Tengo un barco
+  </a>
+  <a href="https://real-dogsled-d8a.notion.site/2799bf7f50958177b63adb311435ceb9" 
+     class="btn secondary" target="_blank" rel="noopener noreferrer">
+    <img src="public/img/look.png" alt="Icono buscar" style="height:20px"/> Busco un barco
+  </a>
+</div>
 
     <div class="map-wrap">
       <div class="map-frame">
